--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,24 +6,24 @@
 </head>
 <body>
 	<div>
-		<input type="button" onclick="RhythmSample.play();" value="播放">
+		<input type="button" value="播放" id="rhythmSample_play">
 	</div>
 	<div>
-		<input type="button" onclick="VolumeSample.toggle();" value="播放/暂停">
-		音量: <input type="range" min="0" max="100" value="100" onchange="VolumeSample.changeVolume(this);"></p>
+		<input type="button" value="播放/暂停" id="volumeSample_toggle">
+		音量: <input type="range" min="0" max="100" value="100" id="volumeSample_changeVolume"></p>
 	</div>
 	<div>
-		<p><input type="button" onclick="CrossfadeSample.toggle();" value="播放/停止">
-		打击乐 <input type="range" min="0" max="100" value="100" onchange="CrossfadeSample.crossfade(this);"> 管弦乐</p>
+		<p><input type="button" value="播放/停止" id="crossfadeSample_toggle">
+		打击乐 <input type="range" min="0" max="100" value="100" id="crossfadeSample_crossfade"> 管弦乐</p>
 	</div>
 	<div>
-		<input type="button" onclick="CrossfadePlaylistSample.toggle();" value="播放/停止">
+		<input type="button" value="播放/停止" id="crossfadePlaylistSample_toggle">
 	</div>
 	<div>
-		<p><input type="button" onclick="FilterSample.toggle();" value="Play/Pause">
-		Filter on: <input type="checkbox" checked="false" onchange="FilterSample.toggleFilter(this);">
-		Frequency: <input type="range" min="0" max="1" step="0.01" value="1" onchange="FilterSample.changeFrequency(this);">
-		Quality: <input type="range" min="0" max="1" step="0.01" value="0" onchange="FilterSample.changeQuality(this);"></p>
+		<p><input type="button" value="Play/Pause" id="filterSample_toggle">
+		Filter on: <input type="checkbox" checked="false" id="filterSample_toggleFilter">
+		Frequency: <input type="range" min="0" max="1" step="0.01" value="1" id="filterSample_changeFrequenct">
+		Quality: <input type="range" min="0" max="1" step="0.01" value="0" id="filterSample_changeQuality"></p>
 	</div>
 	<script type='text/javascript' src='http://demo.newhtml.net/Web%20Audio%20API/buffer-loader.js'></script>
 	<script src="../js/index.bundle.js" type="text/javascript"></script>
