--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,6 +25,9 @@
 		Frequency: <input type="range" min="0" max="1" step="0.01" value="1" id="filterSample_changeFrequenct">
 		Quality: <input type="range" min="0" max="1" step="0.01" value="0" id="filterSample_changeQuality"></p>
 	</div>
+	<div>
+		<input type="button" value="Play" id="scriptProcessor_play">
+	</div>
 	<script type='text/javascript' src='http://demo.newhtml.net/Web%20Audio%20API/buffer-loader.js'></script>
 	<script src="../js/index.bundle.js" type="text/javascript"></script>
 </body>
