--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="../css/index.bundle.css">
 </head>
 <body>
-	
+	<div id="button">START</div>
 	<script src="../js/index.bundle.js" type="text/javascript"></script>
 </body>
 </html>
