--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title></title>
 	<link rel="stylesheet" href="../css/index.bundle.css">
 </head>
+
 <body>
 	<div id="button">START</div>
+	<p>音量：<input type="range" name="" id="volumn"></p>
 	<script src="../js/index.bundle.js" type="text/javascript"></script>
 </body>
+
 </html>
