--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div id="button">START</div>
-	<p>音量：<input type="range" name="" id="volumn"></p>
+	<p>音量：<input type="range" name="" id="volumn" min="0" max="10"></p>
 	<script src="../js/index.bundle.js" type="text/javascript"></script>
 </body>
 
