--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,8 +7,11 @@
 </head>
 
 <body>
-	<div id="button">START</div>
-	<p>音量：<input type="range" name="" id="volumn" min="0" max="10"></p>
+	<div id="button1">START</div>
+	<p>音量：<input type="range" name="" id="volumn1" min="0" max="100"></p>
+	<p>频率：<input type="range" name="" id="frequency1" min="0" max="5000"></p>
+	<div id="button2">START</div>
+	<p>音量：<input type="range" name="" id="volumn2" min="0" max="100"></p>
 	<script src="../js/index.bundle.js" type="text/javascript"></script>
 </body>
 
